Spacing Issues
Working on spacing around the three div in main. This is not working
correctly.

--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ html{
 
 .wanted {
 	background-color: #87714f;
+	width: 100%;
 }
 
 .headline {
